--- a/Formulario.html
+++ b/Formulario.html
@@ -1,13 +1,13 @@
 <html>
 <head>
- <center>
-  <tittle><h1>Formulario de registro al congreso "Tecnologico"</h1><tittle>
- </center>
+  <title>Formulario de registro al congreso "Tecnologico"</title>
 </head>
 
 <body>
 
  <center>
+ <h1>Formulario de registro al congreso "Tecnologico"</h1>
+
  <form method = "get" action ="practica.php" style = "margin-left:20px"> 
 
   <p><h4>Nombre del alumno: <input type="text" id="nombre" name="nombre"/></h4></p>
